# OMNIA-INVARIANCE

./: .gitignore  .zenodo.json  CITATION.cff  README.md  TOTALITY-FIELD.md  ecosystem_manifest.json  pyproject.toml
docs/: ACTIVE_CLAIM_MICRO_FIX_REPORT.json  ACTIVE_CLAIM_MICRO_FIX_REPORT.md  BACKBONE_CI_REPAIR_REPORT.md  BACKBONE_COMPLIANCE.md  CANONICAL_BENCHMARK_SUITE.md  CANONICAL_TRAJECTORY_FORMAT.md  CI_FINAL_COLLECTION_FIX_REPORT.md  CLAIM_BOUNDARY.md  CROSS_DOMAIN_INVARIANCE.md  CROSS_DOMAIN_METROLOGY_FRAME.md  CRYPTO_DOMAIN_OBSERVATIONS.md  DOI_REGISTRY.md  ECOSYSTEM_ROLE.md  EXPERIMENTAL_PROTOCOLS.md  INVARIANCE_BOUNDARY.md  INVARIANCE_MANIFEST.json  INVARIANCE_OVERVIEW.md  INVARIANCE_SCOPE.md  META_TRAJECTORIES.md  MULTI_DOMAIN_RUN_INTERPRETATION.md  OMNIA_INVARIANCE_PUBLIC_POSITION.md  ONLINE_CI_REPAIR_REPORT.md  PRODUCTION_READINESS.md  QUICKSTART_INVARIANCE.md  REPOSITORY_CONSOLIDATION.md  REPOSITORY_STATUS.md  RESULTS_INDEX.md  SECOND_PASS_ONLINE_CI_REPAIR_REPORT.md  STABILITY_AND_COLLAPSE.md  STRUCTURAL_OBSERVABILITY_ROLE.md  SYNTHETIC_TRAJECTORY_LAB.md  TOPOLOGY_ROBUSTNESS_ANALYSIS.md  TRAJECTORY_CLASSES.md  TRAJECTORY_NORMALIZATION.md  TRAJECTORY_SPACE_REGIONS.md  TRAJECTORY_TRANSITION_REGIONS.md  TRANSFORMATION_CONTRACT.md
examples/: classify_trajectories.py  compare_domains.py  cross_domain_comparison.py  export_trajectory_features.py  generate_synthetic_trajectories.py  integrate_synthetic_trajectories.py  invariance_llm_static_demo.py  invariance_logic_demo.py  invariance_physics_demo.py  normalized_trajectory_space.py  sample_invariance_cases.jsonl  (+8 more)
(+30 files in other folders)
